k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sispardt
  labels:
    app.kubernetes.io/name: sispardt
    app.kubernetes.io/managed-by: github-actions
